src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Deceased_Date__c</fullName>
        <label>Deceased Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discovery1__c</fullName>
        <label>Discovery1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discovery2__c</fullName>
        <label>Discovery2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discovery3__c</fullName>
        <label>Discovery3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Driving_License_Exp_Date__c</fullName>
        <label>Driving License Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Driving_License__c</fullName>
        <label>Driving License</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FICO_Score__c</fullName>
        <label>FICO Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__AgeAsText__c</fullName>
        <formula>IF(ISBLANK(Birthdate), &apos;&apos;, IF(And(Month(Today())&gt;= Month(Birthdate), Day(Today()) &gt;=  Day(Birthdate)),
TEXT(Year(Today())- Year(Birthdate)) &amp;&quot; &quot;&amp;&quot;years&quot;&amp;&quot; &quot;&amp;
TEXT(Month(Today())-Month(Birthdate)) &amp;&quot; &quot;&amp;&quot;months&quot;&amp;&quot; &quot;&amp;
TEXT(Day(Today())-Day(Birthdate)),
if(And(month(Today())&lt; month(Birthdate), Day(Today())&gt;= Day(Birthdate)),
TEXT(Year(Today())-Year(Birthdate)-1)&amp;&quot; &quot;&amp;&quot;years&quot;&amp;&quot; &quot;&amp;
TEXT(12 - Month(Birthdate)+month(Today()))&amp;&quot; &quot;&amp;&quot;months&quot;&amp;&quot; &quot;&amp;
TEXT(Day(Today())-Day(Birthdate)),
if(And( month(Today())&lt; month(Birthdate), Day(Today())&lt; Day(Birthdate)),
(TEXT( (Year(Today())-Year(Birthdate)-1))&amp;&quot; &quot;&amp;&quot;years&quot;&amp;&quot; &quot;&amp;
TEXT((12 - Month(Birthdate)+month(Today())-1))&amp;&quot; &quot;&amp;&quot;months&quot;)&amp;&quot; &quot;&amp;
if( month(Birthdate)= 4, TEXT( (30 - Day(Birthdate))+ Day(Today())),
if( month(Birthdate)= 6, TEXT( (30 - Day(Birthdate))+ Day(Today())),
if( month(Birthdate)= 9, TEXT( (30 - Day(Birthdate))+ Day(Today())),
if( month(Birthdate)= 11,TEXT( (30 - Day(Birthdate))+ Day(Today())),
if( month(Birthdate)= 2, TEXT( (28 - Day(Birthdate))+ Day(Today())),
TEXT( (31 - Day(Birthdate))+ Day(Today()))))))),
if(And( month(Today())= month(Birthdate), Day(Today())&lt; Day(Birthdate)),
(TEXT(Year(Today())- Year(Birthdate)-1))&amp;&quot; &quot;&amp;&quot;years&quot;&amp;&quot; &quot;&amp;
&quot;11&quot;&amp;&quot; &quot;&amp;&quot;months&quot;&amp;&quot; &quot;&amp;
if( month(Birthdate)= 4, TEXT( (30 - Day(Birthdate))+ Day(Today())),
if( month(Birthdate)= 6, TEXT( (30 - Day(Birthdate))+ Day(Today())),
if( month(Birthdate)= 9, TEXT( (30 - Day(Birthdate))+ Day(Today())),
if( month(Birthdate)= 11,TEXT( (30 - Day(Birthdate))+ Day(Today())),
if( month(Birthdate)= 2, TEXT( (28 - Day(Birthdate))+ Day(Today())),
TEXT( (31 - Day(Birthdate))+ Day(Today()))))))),
(TEXT(Year(Today())- Year(Birthdate)))&amp;&quot; &quot;&amp;&quot;years&quot;&amp;&quot; &quot;&amp;
TEXT(Month(Today())-Month(Birthdate)-1)&amp;&quot; &quot;&amp;&quot;months&quot;&amp;&quot; &quot;&amp;
if( month(Birthdate)= 4, TEXT( (30 - Day(Birthdate))+ Day(Today())),
if( month(Birthdate)= 6, TEXT( (30 - Day(Birthdate))+ Day(Today())),
if( month(Birthdate)= 9, TEXT( (30 - Day(Birthdate))+ Day(Today())),
if( month(Birthdate)= 11,TEXT( (30 - Day(Birthdate))+ Day(Today())),
if( month(Birthdate)= 2, TEXT( (28 - Day(Birthdate))+ Day(Today())),
TEXT( (31 - Day(Birthdate))+ Day(Today()))))))))
)))&amp;&quot; &quot;&amp;&quot;days&quot;)</formula>
        <label>Age As Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Age__c</fullName>
        <formula>if(And(Month(Today())&gt;= month(Birthdate), Day(Today()) &gt;=  Day(Birthdate)),
Year(Today())- Year(Birthdate) +
(Month(Today())-Month(Birthdate))/12,
if(And(month(Today())&lt; month(Birthdate), Day(Today())&gt;= Day(Birthdate)),
Year(Today())-Year(Birthdate)-1 +
(12 - Month(Birthdate)+month(Today()))/12,
if(And( month(Today())&lt; month(Birthdate), Day(Today())&lt; Day(Birthdate)),
(Year(Today())-Year(Birthdate)-1) + 
((12 - Month(Birthdate)+month(Today())-1))/12,
if(And( month(Today())= month(Birthdate), Day(Today())&lt; Day(Birthdate)),
(Year(Today())- Year(Birthdate)-1) + (11/12),
(Year(Today())- Year(Birthdate)) + 
(Month(Today())-Month(Birthdate)-1)/12))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__AnnualIncome__c</fullName>
        <label>Annual Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__BillingAddress__c</fullName>
        <description>Compound field for Billing Address.</description>
        <formula>if(LEN(Account.BillingStreet)&gt;0, Account.BillingStreet &amp; &quot;\\n&quot; , &quot;&quot; )&amp;
if(LEN(Account.BillingCity)&gt;0, Account.BillingCity &amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(Account.BillingState)&gt;0, Account.BillingState &amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(Account.BillingPostalCode)&gt;0, Account.BillingPostalCode &amp; &quot;\\n&quot;,&quot;&quot;) &amp;
If(LEN( Account.BillingCountry) &gt;0, Account.BillingCountry,&quot;&quot;)</formula>
        <label>Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Citizenship__c</fullName>
        <label>Citizenship</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__CountryOfBirth__c</fullName>
        <label>Country Of Birth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinServ__Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__CountryOfResidence__c</fullName>
        <description>Country of residence.</description>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__CreatedFromLead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__CurrentEmployer__c</fullName>
        <label>Current Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__EmployedSince__c</fullName>
        <description>Year when client started with current employer.</description>
        <label>Employed Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__Facebook__c</fullName>
        <label>Facebook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FinServ__Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Decline to Specify</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__IndividualId__c</fullName>
        <description>Unique ID that relates this individual&apos;s contact record to its account record.</description>
        <formula>Account.FinServ__IndividualId__c</formula>
        <label>Individual ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__IndividualType__c</fullName>
        <description>Individual Type</description>
        <label>Individual Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__LanguagesSpoken__c</fullName>
        <label>Languages Spoken</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__LinkedIn__c</fullName>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FinServ__MailingAddress__c</fullName>
        <description>Compound field for Mailing Address.</description>
        <formula>if(LEN(MailingStreet)&gt;0, MailingStreet&amp; &quot;\\n&quot; , &quot;&quot; ) &amp;
if(LEN(MailingCity)&gt;0, MailingCity&amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(MailingState)&gt;0, MailingState&amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(MailingPostalCode)&gt;0, MailingPostalCode &amp; &quot;\\n&quot; ,&quot;&quot;) &amp;
If(LEN( MailingCountry) &gt;0, MailingCountry,&quot;&quot;)</formula>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__MaritalStatus__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Separated</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__NumberOfDependents__c</fullName>
        <description>Number of dependents.</description>
        <label>Number of Dependents</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__Occupation__c</fullName>
        <label>Occupation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__OtherAddress__c</fullName>
        <description>Compound field for Other Address.</description>
        <formula>if(LEN(OtherStreet)&gt;0,OtherStreet&amp; &quot;\\n&quot; , &quot;&quot; ) &amp;
if(LEN(OtherCity)&gt;0, OtherCity&amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(OtherState)&gt;0, OtherState&amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(OtherPostalCode)&gt;0, OtherPostalCode &amp; &quot;\\n&quot; ,&quot;&quot;) &amp;
If(LEN( OtherCountry) &gt;0, OtherCountry,&quot;&quot;)</formula>
        <label>Other Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__PreferredName__c</fullName>
        <label>Preferred Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryAddressIsBilling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Billing Address as the primary address.</description>
        <label>Primary Address (Billing)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryAddressIsMailing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Mailing Address as the primary address.</description>
        <label>Primary Address (Mailing)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryAddressIsOther__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Other Address as the primary address.</description>
        <label>Primary Address (Other)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryAddressIsShipping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Shipping Address as the primary address.</description>
        <label>Primary Address (Shipping)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryLanguage__c</fullName>
        <label>Primary Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinServ__Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__SecondaryLanguage__c</fullName>
        <label>Secondary Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinServ__Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__ShippingAddress__c</fullName>
        <description>Concatenated shipping address field.</description>
        <formula>if(LEN(Account.ShippingStreet)&gt;0, Account.ShippingStreet&amp; &quot;\\n&quot; , &quot;&quot; ) &amp;
if(LEN(Account.ShippingCity)&gt;0, Account.ShippingCity&amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(Account.ShippingState)&gt;0, Account.ShippingState&amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(Account.ShippingPostalCode)&gt;0,Account.ShippingPostalCode &amp; &quot;\\n&quot;,&quot;&quot;)  &amp;
If(LEN( Account.ShippingCountry) &gt;0, Account.ShippingCountry,&quot;&quot;)</formula>
        <label>Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__TaxBracket__c</fullName>
        <label>Tax Bracket</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>15%</fullName>
                </value>
                <value>
                    <fullName>25%</fullName>
                </value>
                <value>
                    <fullName>28%</fullName>
                </value>
                <value>
                    <fullName>33%</fullName>
                </value>
                <value>
                    <fullName>35%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__TaxId__c</fullName>
        <label>Tax ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Twitter__c</fullName>
        <label>Twitter</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FinServ__WeddingAnniversary__c</fullName>
        <description>Date of wedding anniversary.</description>
        <label>Wedding Anniversary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsPortalEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Equals TRUE if the related user is enabled in at least one community</description>
        <label>IsPortalEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Method_of_Contact__c</fullName>
        <label>Method of Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mobile Phone</fullName>
                </value>
                <value>
                    <fullName>Home Phone</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mother_s_Maiden_Name__c</fullName>
        <label>Mother&apos;s Maiden Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_ID__c</fullName>
        <externalId>true</externalId>
        <label>Party ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Branch__c</fullName>
        <label>Preferred Branch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Branch 1</fullName>
                </value>
                <value>
                    <fullName>Branch 2</fullName>
                </value>
                <value>
                    <fullName>Branch 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Exited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>FinServ__Upcoming_Birthdays_Next_7_Days</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>FinServ__Age__c</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:7</value>
        </filters>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.FinServ__IndustriesIndividual</value>
        </filters>
        <label>Upcoming Birthdays (Next 7 Days)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FinServ__Upcoming_RMDs_Next_7_Days</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>FinServ__Age__c</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>FinServ__Age__c</field>
            <operation>lessThan</operation>
            <value>70.5</value>
        </filters>
        <filters>
            <field>FinServ__Age__c</field>
            <operation>greaterThan</operation>
            <value>70</value>
        </filters>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:90</value>
        </filters>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>lessThan</operation>
            <value>LAST_N_DAYS:82</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.FinServ__IndustriesIndividual</value>
        </filters>
        <label>Upcoming RMDs (Next 7 Days)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>FinServ__IndustriesBusiness</fullName>
        <active>true</active>
        <description>Contact data for an institution or a business account</description>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__IndustriesIndividual</fullName>
        <active>true</active>
        <description>Contact data for a retail client</description>
        <label>Individual</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FinServ__BirthdateCannotBeInFuture</fullName>
        <active>true</active>
        <description>Check to see if Birthdate is in future</description>
        <errorConditionFormula>Birthdate &gt; Today()</errorConditionFormula>
        <errorMessage>Date of birth can&apos;t be in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__CannotHaveMoreThanOnePrimaryAddress</fullName>
        <active>true</active>
        <description>Only one address can be designated as the primary address.</description>
        <errorConditionFormula>IF(IF(FinServ__PrimaryAddressIsMailing__c,1,0) + IF(FinServ__PrimaryAddressIsOther__c,1,0)+  IF(FinServ__PrimaryAddressIsBilling__c,1,0)+ IF(FinServ__PrimaryAddressIsShipping__c,1,0)&gt;1,true,false)</errorConditionFormula>
        <errorMessage>Only one address can be designated as the primary address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__ContactCannotBeAssociatedToHousehold</fullName>
        <active>true</active>
        <description>Check to see if contact is associated directly to household</description>
        <errorConditionFormula>Account.RecordType.DeveloperName=&apos;IndustriesHousehold&apos;</errorConditionFormula>
        <errorMessage>A lead must be associated with an individual account. A contact must be associated with a business account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__IndividualCannotHaveMoreThanOneContact</fullName>
        <active>false</active>
        <description>Error message when adding more than one contact to an individual account</description>
        <errorConditionFormula>1!=1</errorConditionFormula>
        <errorMessage>The selected account has an Individual record type and can&apos;t have additional contacts associated with it</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__NotAllowingConversionFromIndividual</fullName>
        <active>false</active>
        <errorConditionFormula>1!=1</errorConditionFormula>
        <errorMessage>The Individual record type can&apos;t be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__NotAllowingConversionToIndividual</fullName>
        <active>false</active>
        <description>Not allowing changing the record type of &quot;non-Individual&quot; to &quot;Individual&quot; record type</description>
        <errorConditionFormula>1!=1</errorConditionFormula>
        <errorMessage>The record type can&apos;t be changed to Individual.</errorMessage>
    </validationRules>
</CustomObject>